Make sure that the sizes of other views are not changed when one view is split.

BUG: 160407

svn path=/trunk/KDE/kdebase/apps/; revision=960084